--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,33 @@
 version: '2'
 services:
+  mysql:
+    image: mysql:5.7
+    volumes:
+      - "/data/docker/mysql/gvv:/var/lib/mysql"
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: toto
+
+  myadmin:
+    hostname: phpmyadmin
+    domainname: phpmyadmin.test.flub78.fr
+    depends_on:
+      - mysql
+    image: phpmyadmin/phpmyadmin
+    links:
+      - "mysql:db"
+    ports:
+      - "7090:80"
+    restart: always
+
   gvv:
     build: .
+    hostname: gvv
+    domainname: test.flub78.fr
+
     image: flub78/gvv
+    links:
+      - "mysql:mysql"
     ports:
       - "7080:80"
       - "7443:443"
@@ -11,3 +36,4 @@ services:
     extra_hosts:
       - "gvv.fr:127.0.0.1"
       - "citemplate.fr:127.0.0.1"
+      
